--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+#root {
+  margin: 0 ;
+  padding: 0;
+  box-sizing: border-box;
+}
 .l{
    font-family: "Lato", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
+.purple{
+  background: #6d4aae;
+}
 body{
    font-family: "Lato", sans-serif;
-
 }
